# TrackStack

./: CMakeLists.txt  Doxyfile  README.md
include/: stack.h  stack_generic.h
src/: demo_stack.c  stack.c  stack_check.c  stack_def.c  stack_error.c  stress_stack.c
